code review followup. Cover all deprecated endpoints (method/path) in test