@@ -10,6 +10,7 @@ package org.elasticsearch.xpack.graph.rest.action;
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.core.RestApiVersion;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.protocol.xpack.graph.GraphExploreRequest;
 import org.elasticsearch.protocol.xpack.graph.GraphExploreResponse;
 import org.elasticsearch.rest.RestRequest;
@@ -37,15 +38,24 @@ public class RestGraphActionTests extends RestActionTestCase {
     }
 
     public void testTypeInPath() {
-        RestRequest request = new FakeRestRequest.Builder(xContentRegistry())
-            .withHeaders(Map.of("Accept", compatibleMediaType, "Content-Type",
-                Collections.singletonList(compatibleMediaType(XContentType.VND_JSON, RestApiVersion.V_7))))
-            .withMethod(RestRequest.Method.GET)
-            .withPath("/some_index/some_type/_graph/explore")
-            .withContent(new BytesArray("{}"), null)
-            .build();
+        for (Tuple<RestRequest.Method, String> methodAndPath :
+            List.of(
+                Tuple.tuple(RestRequest.Method.GET, "/some_index/some_type/_graph/explore"),
+                Tuple.tuple(RestRequest.Method.POST, "/some_index/some_type/_graph/explore"),
+                Tuple.tuple(RestRequest.Method.GET, "/some_index/some_type/_xpack/graph/_explore"),
+                Tuple.tuple(RestRequest.Method.POST, "/some_index/some_type/_xpack/graph/_explore")
+            )) {
 
-        dispatchRequest(request);
-        assertWarnings(RestGraphAction.TYPES_DEPRECATION_MESSAGE);
+            RestRequest request = new FakeRestRequest.Builder(xContentRegistry())
+                .withHeaders(Map.of("Accept", compatibleMediaType, "Content-Type",
+                    Collections.singletonList(compatibleMediaType(XContentType.VND_JSON, RestApiVersion.V_7))))
+                .withMethod(methodAndPath.v1())
+                .withPath(methodAndPath.v2())
+                .withContent(new BytesArray("{}"), null)
+                .build();
+
+            dispatchRequest(request);
+            assertWarnings(RestGraphAction.TYPES_DEPRECATION_MESSAGE);
+        }
     }
 }
